<resources>
    <string name="sound">Sound</string>
    <string name="different_tweaks">Different Tweaks</string>
    <string name="phone_info">Phone Info</string>
    <string name="phone_info_summary">Hidden HTC phone diagnostics screen</string>
    <string name="overscroll_glow_color">Overscroll Glow Color</string>
    <string name="overscroll_glow_color_summary">Set the overscroll glow color</string>
    <string name="other">Other</string>
    <string name="appearance">Appearance</string>
    <string name="aosp_lockscreen">AOSP Lockscreen</string>
    <string name="aosp_lockscreen_summary">Activates the AOSP ICS Lockscreen</string>
    <string name="carrier_caption">Carrier Caption</string>
    <string name="carrier_caption_summary">Change the default carrier text on the lockscreen</string>
    <string name="unlock_buttons">Buttons to unlock</string>
    <string name="unlock_buttons_summary">Choose a button to unlock the lockscreen</string>
    <string name="clock_options">Clock Options</string>
    <string name="battery_options">Battery Options</string>
    <string name="hide_notification_icons">Hide specific Notification Icons</string>
    <string name="quick_quick_settings">Quick-quick settings</string>
    <string name="quick_quick_settings_summary">Automatically show quick settings when there are no notifications to clear</string>
    <string name="statusbar_tweaks">Statusbar Tweaks</string>
    <string name="quicksettings_tweaks">Quicksettings Tweaks</string>
    <string name="hide_n_reorder">Hide n Reorder</string>
    <string name="hide_n_reorder_summary">Hiding/Reordering quicksettings</string>
    <string name="notification_pulldown_tweaks">Notification Pulldown Tweaks</string>
    <string name="notificationbar_caption">Notificationbar Caption</string>
    <string name="notificationbar_caption_summary">The text to be displayed at top of the Notificationbar</string>
    <string name="homescreen">Homescreen</string>
    <string name="show_unlock_animation">Show unlock animation</string>
    <string name="enable_landscape">Enable landscape</string>
    <string name="enable_landscape_summary">Enable support for landscape orientation on rosie</string>
    <string name="transp_navbar">Transparent navigationbar</string>
    <string name="transp_navbar_summary">Makes the navigationbar transparent</string>
    <string name="app_drawer">App Drawer</string>
    <string name="hide_date">Hide date</string>
    <string name="hide_date_summary">Hide date from notification area</string>
    <string name="notif_bgcolor">Background color</string>
    <string name="notif_bgcolor_summary">Change the notification area background</string>
    <string name="rosie_bgcolor">Background color</string>
    <string name="rosie_bgcolor_summary">Change the app drawer background color</string>
    <string name="recentapps_dialog_tweaks">Recent apps dialog</string>
    <string name="h_icon_replace">High speed mobile data icon</string>
    <string name="h_icon_replace_summary">Replace the standard H icon with another</string>
    <string name="statusbar_custombg">Use background image</string>
    <string name="statusbar_custombg_summary">Set any image as a notification area bacground</string>
    <string name="rosie_custombg">Use background image</string>
    <string name="rosie_custombg_summary">Set any image as an app drawer background</string>
    <string name="lockscreen_hide_datetime">Hide date/time</string>
    <string name="lockscreen_hide_datetime_summary">Hides date,time or am/pm</string>
    <string name="lockscreen_hide_opname">Hide carrier label</string>
    <string name="lockscreen_hide_opname_summary">Hides carrier label from lockscreen</string>
    <string name="use_media_summary">Choose the volume keys longpress action while the screen is off</string>
    <string name="use_media">Volume keys music control</string>
    <string name="extended_statusbartext">Carrier second label</string>
    <string name="extended_statusbartext_summary">Information string below carrier label</string>
    <string name="extended_statusbartext_color">Color of second line</string>
    <string name="extended_statusbartext_color_summary">Color of string below carrier label</string>
    <string name="statusbarcaption_options">Carrier label</string>
    <string name="statusbarcaption_options_summary">Custom label, 1 or 2 lines and etc.</string>
    <string name="extended_statusbartext_showicon">Show icon</string>
    <string name="extended_statusbartext_showicon_summary">Show icon in second line</string>
    <string name="cm_brightness_control">CM brightness control</string>
    <string name="cm_brightness_control_summary">Slide left-right to change brightness</string>
    <string name="recentapps_style">Dialog style</string>
    <string name="recentapps_style_summary">Change recent apps dialog style</string>
    <string name="statusbar_trans">Transparency</string>
    <string name="statusbar_trans_summary">Change status bar transparency level</string>
    <string name="htc_settings">HTC Hidden settings</string>
    <string name="fixing_optimizing">Fixing/Optimizing</string>
    <string name="zipalign_apks">Zipalign all Apks</string>
    <string name="system">System</string>
    <string name="mount_system_rw">Mount system r/w</string>
    <string name="wipes">Wipes</string>
    <string name="wipe_cache">Wipe Cache</string>
    <string name="wipe_dalvik">Wipe Dalvik Cache</string>
    <string name="longress_home_ls">Long press Home action</string>
    <string name="longress_home_ls_summary">Choose an action for longpressing the home button on the lockscreen</string>
    <string name="use_xloud">Enable Sony XLoud</string>
    <string name="use_xloud_summary">Sound enhancement technology from Sony</string>
    <string name="use_bravia">Enable Sony Bravia</string>
    <string name="use_bravia_summary">Pictrure enhancement technology from Sony</string>
    <string name="boot">Boot</string>
    <string name="bootanimation">Custom bootanimation</string>
    <string name="downanimation">Custom downanimation</string>
    <string name="enable_boot_sound">Enable boot sound</string>
    <string name="boot_sound">Custom boot sound</string>
    <string name="cube_animation">Enable cube animation</string>
    <string name="cube_animation_summary">Enables the cube animation while switching tabs in HTC apps</string>
    <string name="unlock_slide">Enable Slide 2 Unlock</string>
    <string name="unlock_slide_summary">Move finger from home to search to unlock</string>
    <string name="fast_dormancy">Enable fast dormancy</string>
    <string name="fast_dormancy_summary">Enable fast dormancy. Be careful not all providers support it!</string>
    <string name="gestures">3-Finger gesture</string>
    <string name="enable_gestures">Enable 3-Finger gesture</string>
    <string name="direction">Gesture direction</string>
    <string name="gesture_left">Left</string>
    <string name="gesture_down">Down</string>
    <string name="gesture_up">Up</string>
    <string name="gesture_right">Right</string>
    <string name="systemui_theme">Status bar icons theme</string>
    <string name="icons_theme">Icons</string>
    <string name="systemui_theme_pack">Theme pack</string>
    <string name="systemui_theme_pack_summary">Apply all icons from theme</string>
    <string name="wifi_icon">WiFi icon</string>
    <string name="signal_icon">Signal icon</string>
    <string name="battery_icon">Battery icon</string>
    <string name="gps_icon">GPS icon</string>
    <string name="bluetooth_icon">Bluetooth icon</string>
    <string name="alarm_icon">Alarm icon</string>
    <string name="headset_icon">Headphones icon</string>
    <string name="sync_icon">Sync icon</string>
    <string name="volume_icon">Volume icon</string>
    <string name="data_icon">Internet connection icon</string>
    <string name="carrier_icon">Show carrier icon</string>
    <string name="carrier_icon_summary">Show custom carrier icon</string>
    <string name="eqs_icons">Quick settings icons</string>
    <string name="statusbarcaption_settings_button">Settings button</string>
    <string name="statusbarcaption_first_line">First line</string>
    <string name="statusbarcaption_second_line">Second line</string>
    <string name="hide_settings">Hide button</string>
    <string name="hide_settings_summary">Hides settings button from right corner of notification area</string>
    <string name="systemui_settings_summary">Run custom app then you press on settings button</string>
    <string name="systemui_settings">Custom app</string>
    <string name="systemui_carrier_summary">Run custom app then you press on carrier label</string>
    <string name="systemui_carrier">Run custom app</string>
    <string name="autobacklight_brightness">Autobacklight Brightness</string>
    <string name="autobacklight_brightness_summary">Sets the brightness strength of the autobacklight</string>
    <string name="rosie_ringscroll">Infinite Scroll</string>
    <string name="rosie_ringscroll_summary">Continuously scroll through all screens</string>
    <string name="rosie_icon_theme">Icon pack</string>
    <string name="rosie_icon_theme_summary">Choose rosie icon pack</string>
    <string name="disable_logcat">Disable logcat</string>
    <string name="disable_logcat_summary">Might increase performance and battery life, but no logging</string>
    <string name="zipalign_apks_summary">Perform zipalign on all user apps</string>
    <string name="rosie_scrollwall">Wallpaper Scrolling</string>
    <string name="rosie_scrollwall_summary">Scroll wallpaper when scrolling homescreens</string>
    <string name="lockscreen_shortcuts">Shortcuts</string>
    <string name="lockscreen_shortcuts_summary">Customize the lockscreen shortcuts</string>
    <string name="disable_smartsync">Disable HTC SmartSync</string>
    <string name="disable_smartsync_summary">Prevent Wifi from disabling at night</string>
    <string name="sweep_wake">Sweep2Wake mode</string>
    <string name="sweep_wake_summary">Allows you to setup Sweep2Wake if the feature is supported on your kernel</string>
    <string name="aosp_call_unlock">Autounlock on ring</string>
    <string name="aosp_call_unlock_summary">Unlock lockscreen on incomming call</string>
    <string name="minfree">Minfree setting</string>
    <string name="minfree_summary">Set up the Android low memory killer settings</string>
    <string name="disable_volkeys_on_ls">Disable volume keys</string>
    <string name="disable_volkeys_on_ls_summary">Disable the volume keys while the screen is off,they will only work when music is playing</string>
    <string name="statusbar_icon">Status bar icon</string>
    <string name="statusbar_icon_summary">Set an icon in the top left corner of the status bar</string>
    <string name="fonts">Fonts</string>
    <string name="fonts_title">Use custom font</string>
    <string name="fonts_summary">Install a custom font pack</string>
    <string name="misc_sms_network">SMS and Networks</string>
    <string name="misc_system">System</string>
    <string name="misc_appearance">Appearance</string>
    <string name="block_pulldown">Block on lockscreen</string>
    <string name="block_pulldown_summary">Disable notification pulldown on lockscreen</string>
    <string name="hide_qs">Hide tabbed quick settings</string>
    <string name="hide_qs_summary">Hides tabbed quick settings from notification area</string>
    <string name="animations_summary">Change the transition animations</string>
    <string name="animations">Transition animations</string>
    <string name="heqs_icons">Horizontal quick settings</string>
    <string name="quicklauncher">Customize Quick Launch</string>
    <string name="quicklauncher_summary">Add or remove programs from quick launch</string>
    <string name="quicklauncher_state">Enable Quick Launch</string>
    <string name="quicklauncher_state_summary">Show or hide quick launch on QS tab</string>
</resources>